--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,13 @@ env:
   stage: .pre
   script:
     - >
-        echo ${TARGET_ENV}
+        if [[ -z "${TARGET_ENV}" || "dev" == "${TARGET_ENV}" ]]
+          then 
+            export ENV_FILE='.env.dev';
+        else
+          then export ENV_FILE='.env'
+        elif
+        echo 'using env file '${ENV_FILE}
         .
   tags: 
     - shell
@@ -13,7 +19,7 @@ auth:
   script:
     - echo "Starting authentication services..."
     - ls -lart
-    - docker-compose -f ./keycloak/auth-dev.yml up
+    - docker-compose -f ./keycloak/auth-dev.yml --env-file=${ENV_FILE} up
   tags:
     - shell
     
