--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,12 @@ env:
   stage: .pre
   script:
     - >
-        if [[ -z "${TARGET_ENV}" || "dev" == "${TARGET_ENV}" ]]
-          then; export ENV_FILE='.env.dev';
+        if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} ]];
+          then export ENV_FILE='.env.dev';
         else
-          then; export ENV_FILE='.env'
+          export ENV_FILE='.env'
         fi
-        echo 'using env file '${ENV_FILE}
+        echo 'using file '${ENV_FILE}' as variable file...'
         .
   tags: 
     - shell
