--- a/keycloak/.env
+++ b/keycloak/.env
@@ -1,5 +1,5 @@
 KEYCLOAK_TAG=11.0.3
 POSTGRES_TAG=13
-V_POSTGRES_NAME=V_postgres
-POSTGRES_PASSWORD=admin
-POSTGRES_DB_ADDR=localhost
+V_POSTGRES_NAME=${V_POSTGRES_NAME}
+POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+POSTGRES_DB_ADDR=${POSTGRES_DB_ADDR}
