--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ env:
   stage: .pre
   script:
     - >
-        if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} || "DEV" = ${TARGET_ENV} ]];
+        echo "${TARGET_ENV}"
+        if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} || "DEV" = "${TARGET_ENV}" ]];
           then export ENV_FILE='.env.dev';
         else
           export ENV_FILE='.env';
