--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,10 @@ env:
   stage: .pre
   script:
     - >
-        echo "${TARGET_ENV}"
+        echo ${TARGET_ENV};
         if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} || "DEV" = "${TARGET_ENV}" ]];
           then export ENV_FILE='.env.dev';
+          echo "hiiiiii";
         else
           export ENV_FILE='.env';
         fi
