--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ env:
         echo ${TARGET_ENV};
         if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} || "DEV" = "${TARGET_ENV}" ]];
           then export ENV_FILE='.env.dev';
-          echo "hiiiiii";
+          echo "hiiiiii"${ENV_FILE};
         else
           export ENV_FILE='.env';
         fi
@@ -17,7 +17,7 @@ auth:
   stage: deploy
   script:
     - echo 'using file '${ENV_FILE}' as variable file...'
-    - . ${ENV_FILE}
+    - . ./.dev.env
     - echo "Starting authentication services..."
     - ls -lart
     - docker-compose -f ./keycloak/auth-dev.yml --env-file=${ENV_FILE} up
