--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,20 +4,57 @@ env:
   stage: .pre
   script:
     - >
-        echo ${TARGET_ENV};
+        ### function that creates config
+        ### check if file exits if not create it and add 'x' privilege on it
+        function create_config_if_needed() {
+          cfg_file_path="../config";
+          if [[ ! -f ${cfg_file_path} ]];
+            then echo "file not found "$cfg_file_path" - creating it ...";
+                 touch ${cfg_file_path};
+                 chmod +x ${cfg_file_path};
+          fi
+          export CONFIG_FILE=${cfg_file_path};
+          shift;
+        }
+        ### append service configuration to global configuration
+        put_config() {
+          svc_cfg_file=$1;
+          echo "service file "${svc_cfg_file};
+          echo "global config file" ${CONFIG_FILE};
+          cat ${svc_cfg_file} >> ${CONFIG_FILE}
+          shift;
+        }
+        ### function that handle copying service config to global config
+        function copy_config() {
+          svc=$1;
+          file=$2;
+          if [[ -z ${svc} || -z ${file} ]];
+            then echo 'ERR - both service and file are required';
+            exit -1;
+          elif [[ ! -f ${file} ]];
+            then echo "file '"${file}"' doesn't exists";
+            exit -1;
+          else
+            create_config_if_needed;
+            put_config ${file};
+          fi
+          shift;
+        }
+        ### MAIN Config shell
         if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} || "DEV" = "${TARGET_ENV}" ]];
           then export ENV_FILE='.env.dev';
           echo "hiiiiii"${ENV_FILE};
         else
           export ENV_FILE='.env';
         fi
+        copy_config 'Authentication' ${ENV_FILE};
   tags: 
     - shell
 auth:
   stage: deploy
   script:
-    - echo 'using file '${ENV_FILE}' as variable file...'
-    - . ./.dev.env
+    - echo 'using file '../config' as variable file...'
+    - . ./config
     - echo "Starting authentication services..."
     - ls -lart
     - docker-compose -f ./keycloak/auth-dev.yml --env-file=${ENV_FILE} up
