--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ env:
           shift;
         }
         ### append service configuration to global configuration
+        #$1 : configuration file to append
         put_config() {
           svc_cfg_file=$1;
           echo "service file "${svc_cfg_file};
@@ -25,9 +26,14 @@ env:
           shift;
         }
         ### function that handle copying service config to global config
+        ### $1 : Service name
+        ### $2 : configuration file to load
+        ### $3 : service directory
         function copy_config() {
           svc=$1;
           file=$2;
+          
+          cd $3; 
           if [[ -z ${svc} || -z ${file} ]];
             then echo 'ERR - both service and file are required';
             exit -1;
@@ -38,26 +44,27 @@ env:
             create_config_if_needed;
             put_config ${file};
           fi
+          # return to base folder
+          cd -;
           shift;
         }
         ### MAIN Config shell
         if [[ -z "${TARGET_ENV}" || "dev" = ${TARGET_ENV} || "DEV" = "${TARGET_ENV}" ]];
           then export ENV_FILE='.env.dev';
-          echo "hiiiiii"${ENV_FILE};
         else
           export ENV_FILE='.env';
         fi
-        copy_config 'Authentication' ${ENV_FILE};
+        copy_config 'Authentication' ${ENV_FILE} 'keycloak/';
   tags: 
     - shell
 auth:
   stage: deploy
   script:
-    - echo 'using file '../config' as variable file...'
+    - echo 'using file './config' as variable file...'
     - . ./config
     - echo "Starting authentication services..."
     - ls -lart
-    - docker-compose -f ./keycloak/auth-dev.yml --env-file=${ENV_FILE} up
+    - docker-compose -f ./keycloak/auth-dev.yml --env-file=./config up
   tags:
     - shell
     
