--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,9 +33,9 @@ env:
         function copy_config() {
           svc=$1;
           file=$2;
-          
+          echo $3
           cd $3;
-          echo $pwd;
+          echo "path "${pwd};
           if [[ -z ${svc} || -z ${file} ]];
             then echo 'ERR - both service and file are required';
             exit -1;
