--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ env:
         copy_config 'Authentication' ${ENV_FILE} 'keycloak/';
   tags: 
     - shell
+  artifacts:
+    - ./config
 auth:
   stage: deploy
   script:
