--- a/keycloak/.env
+++ b/keycloak/.env
@@ -1,5 +1,8 @@
+KEYCLOAK_USER=${KEYCLOAK_USER}
+KEYCLOAK_PASSWORD=${KEYCLOAK_PASSWORD}
 KEYCLOAK_TAG=11.0.3
 POSTGRES_TAG=13
 V_POSTGRES_NAME=${V_POSTGRES_NAME}
 POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-POSTGRES_DB_ADDR=${POSTGRES_DB_ADDR}
+POSTGRES_DB=${POSTGRES_DB}
+POSTGRES_USER=${POSTGRES_USER}
