--- a/keycloak/.env.dev
+++ b/keycloak/.env.dev
@@ -1,5 +1,8 @@
+KEYCLOAK_USER=nearmi-dev
+KEYCLOAK_PASSWORD=HelloHaloLuffyDiableJambe!_882444Azerty
 KEYCLOAK_TAG=11.0.3
 POSTGRES_TAG=13
 V_POSTGRES_NAME=V_postgres
-POSTGRES_PASSWORD=admin
-POSTGRES_DB_ADDR=localhost
+POSTGRES_PASSWORD=Viou--(|!RoyaMajRaiponceTtlamur67878
+POSTGRES_DB=keycloak
+POSTGRES_USER=keycloak
