--- a/keycloak/auth-dev.yml
+++ b/keycloak/auth-dev.yml
@@ -5,19 +5,27 @@ volumes:
 services:
   authBdd:
     image: postgres:${POSTGRES_TAG}
-    ports:
-      - '5432:5432' 
+    expose:
+      - 5432
     volumes:
       - 'postgres_data:/var/lib/postgresql/data'
     restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
   keycloak:
     image: jboss/keycloak:${KEYCLOAK_TAG}
     ports:
       - '8080:8080' 
     environment:
       DB_VENDOR: postgres
-      DB_ADDR: ${POSTGRES_DB_ADDR}
-    links:
+      DB_ADDR: postgres
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_SCHEMA: public
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      KEYCLOAK_USER: ${KEYCLOAK_USER}
+      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
+    depends on:
       - 'authBdd'
