update authentication service

--- a/keycloak/auth-dev.yml
+++ b/keycloak/auth-dev.yml
@@ -27,5 +27,5 @@ services:
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       KEYCLOAK_USER: ${KEYCLOAK_USER}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
-    depends on:
+    depends_on:
       - 'authBdd'
