--- a/manifest/k8s_keycloak.yml
+++ b/manifest/k8s_keycloak.yml
@@ -91,5 +91,5 @@ spec:
           containerPort: 8080
         readinessProbe:
           httpGet:
-            path: /auth/realms/master
+            path: /auth
             port: 8080
