--- a/manifest/k8s_keycloak.yml
+++ b/manifest/k8s_keycloak.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: nearmi
----  
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -24,14 +24,14 @@ metadata:
   name: keycloak-config
   namespace:  nearmi
 ---
-apiVersion: networking.k8s.io/v1 
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: keycloak
   namespace:  nearmi
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-spec:  
+spec:
   rules:
     - host: "ingress.nearmi"
       http:
@@ -77,19 +77,18 @@ spec:
         app: keycloak
     spec:
       containers:
-      - name: keycloak
-        image: quay.io/keycloak/keycloak:12.0.1
-        env:
-        - configMapRef:
-            name: keycloak-config
-        - secretRef:
-            name: keycloak-token
-        ports:
-        - name: http
-          containerPort: 8080
-        - name: http
-          containerPort: 8080
-        readinessProbe:
-          httpGet:
-            path: /auth
-            port: 8080
+        - name: keycloak
+          image: quay.io/keycloak/keycloak:12.0.1
+          envFrom:
+            - configMapRef:
+                name: keycloak-config
+            - secretRef:
+                name: keycloak-token
+          ports:
+            - name: http
+              containerPort: 8080
+
+          readinessProbe:
+            httpGet:
+              path: /auth
+              port: 8080
