--- a/manifest/k8s_ingress.yml
+++ b/manifest/k8s_ingress.yml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -36,7 +35,7 @@ metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
 data:
-    use-forwarded-headers: "true"
+  use-forwarded-headers: 'true'
 ---
 # Source: ingress-nginx/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -78,7 +77,7 @@ rules:
       - watch
   - apiGroups:
       - extensions
-      - networking.k8s.io   # k8s 1.14+
+      - networking.k8s.io # k8s 1.14+
     resources:
       - ingresses
     verbs:
@@ -94,13 +93,13 @@ rules:
       - patch
   - apiGroups:
       - extensions
-      - networking.k8s.io   # k8s 1.14+
+      - networking.k8s.io # k8s 1.14+
     resources:
       - ingresses/status
     verbs:
       - update
   - apiGroups:
-      - networking.k8s.io   # k8s 1.14+
+      - networking.k8s.io # k8s 1.14+
     resources:
       - ingressclasses
     verbs:
@@ -170,7 +169,7 @@ rules:
       - watch
   - apiGroups:
       - extensions
-      - networking.k8s.io   # k8s 1.14+
+      - networking.k8s.io # k8s 1.14+
     resources:
       - ingresses
     verbs:
@@ -179,13 +178,13 @@ rules:
       - watch
   - apiGroups:
       - extensions
-      - networking.k8s.io   # k8s 1.14+
+      - networking.k8s.io # k8s 1.14+
     resources:
       - ingresses/status
     verbs:
       - update
   - apiGroups:
-      - networking.k8s.io   # k8s 1.14+
+      - networking.k8s.io # k8s 1.14+
     resources:
       - ingressclasses
     verbs:
