--- a/manifest/k8s_nexus.yml
+++ b/manifest/k8s_nexus.yml
@@ -5,7 +5,7 @@ metadata:
 ---
 apiVersion: v1
 data:
-  INSTALL4J_ADD_VM_PARAMS: "-Xms256m -Xmx512m -XX:MaxDirectMemorySize=512m"
+  INSTALL4J_ADD_VM_PARAMS: '-Xms256m -Xmx512m -XX:MaxDirectMemorySize=512m'
 kind: ConfigMap
 metadata:
   labels:
@@ -13,16 +13,16 @@ metadata:
   name: nexus-config
   namespace: dev-tool
 ---
-apiVersion: networking.k8s.io/v1 
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nexus
   namespace: dev-tool
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-spec:  
+spec:
   rules:
-    - host: "ingress.nearmi"
+    - host: 'ingress.nearmi'
       http:
         paths:
           - path: /repo(/|$)(.*)
@@ -78,5 +78,3 @@ spec:
             httpGet:
               path: /
               port: 8081
-            
-    
