--- a/sh/conf/ssl.conf
+++ b/sh/conf/ssl.conf
@@ -1,8 +1,8 @@
 <IfModule mod_ssl.c>
     <VirtualHost _default_:443>
 
-            ErrorLog ./logs/error.log
-            CustomLog ./logs/access.log combined
+            ErrorLog /var/log/apache2/error.log
+            CustomLog /var/log/apache2/ access.log combined
 
             SSLEngine on
 
