--- a/sh/template/vhost.template
+++ b/sh/template/vhost.template
@@ -1,14 +1,14 @@
-<VirtualHost *:#PORT#>|
-  SSLEngine on|
-  SSLCertificateFile      /etc/ssl/certs/apache.crt|
-  SSLCertificateKeyFile /etc/ssl/private/apache.key|
-  |
-  RequestHeader set X-Forwarded-Host #HOST#|
-  RequestHeader set X-Forwarded-Proto https|
+<VirtualHost *:#PORT#>
+  SSLEngine on
+  SSLCertificateFile      /etc/ssl/certs/apache.crt
+  SSLCertificateKeyFile /etc/ssl/private/apache.key
+  
+  RequestHeader set X-Forwarded-Host #HOST#
+  RequestHeader set X-Forwarded-Proto https
   RequestHeader set X-Forwarded-Port #PORT#
-  |
-  ServerName "#HOST#"|
-  ProxyPreserveHost Off|
-  ProxyPass /  http://ingress.nearmi/repo/|
-  ProxyPassReverse / http://ingress.nearmi/repo/|
-</VirtualHost>|
+  
+  ServerName "#HOST#"
+  ProxyPreserveHost Off
+  ProxyPass /  http://ingress.nearmi/repo/
+  ProxyPassReverse / http://ingress.nearmi/repo/
+</VirtualHost>
