--- a/sh/config
+++ b/sh/config
@@ -15,6 +15,12 @@ K8S_POD_NETWORK_CIDR=192.168.0.0/24
 K8S_CLUSTER_TYPE=dev
 K8S_MASTER_USER=k8s
 K8S_MASTER_GROUP=k8s
+K8S_VERSION=1.19.6-00
 # reverse proxies (apache and nginx)
 INGRESS_RV_HOST=ingress.nearmi
-APACHE_RV_HOST=cluster.nearmi-dev
+APACHE_RV_HOST=cluster.nearmi-dev   
+# nfs
+NFS_SHARED_DIR=/srv/nexus_data
+NFS_MOUNTED_DIR=/mnt/nexus_data
+NFS_AUTHORIZED_IPS=146.59.237.14,51.77.223.186,51.77.220.48
+NFS_EXPOSING_NODE=master-node #can be an ip address
