--- a/manifest/dev-tool/k8s_gitlab-runner.yml
+++ b/manifest/dev-tool/k8s_gitlab-runner.yml
@@ -29,6 +29,7 @@ data:
   KUBERNETES_TERMINATIONGRACEPERIODSECONDS: '10'
   KUBERNETES_POLL_INTERVAL: '5'
   KUBERNETES_POLL_TIMEOUT: '360'
+
 kind: ConfigMap
 metadata:
   labels:
@@ -48,8 +49,9 @@ data:
     }
     trap 'unregister' EXIT HUP INT QUIT PIPE TERM
     echo "Registering runner ${RUNNER_NAME} ..."
-    mkdir /home/gitlab-runner/.gitlab-runner
-    touch /home/gitlab-runner/.gitlab-runner/config.toml
+    mkdir /.gitlab-runner
+    touch /.gitlab-runner/config.toml
+
     /usr/bin/gitlab-ci-multi-runner register -r ${GITLAB_CI_TOKEN}
     sed -i 's/^concurrent.*/concurrent = '"${RUNNER_REQUEST_CONCURRENCY}"'/' /home/gitlab-runner/.gitlab-runner/config.toml
     echo "Starting runner ${RUNNER_NAME} ..."
@@ -75,32 +77,32 @@ data:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gitlab-ci
+  name: gitlab-runner-admin
   namespace: gitlab-runner
 ---
-kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
+kind: 'ClusterRole'
 metadata:
-  namespace: gitlab-runner
-  name: gitlab-ci
+  name: gitlab-runner-admin
+  namespace: gitlabci
 rules:
-  - apiGroups: ['']
+  - apiGroups: ['*']
     resources: ['*']
     verbs: ['*']
 ---
-kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: 'ClusterRoleBinding'
 metadata:
-  name: gitlab-ci
+  name: gitlab-runner-admin
   namespace: gitlab-runner
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: 'ClusterRole'
+  name: gitlab-runner-admin
 subjects:
   - kind: ServiceAccount
-    name: gitlab-ci
+    name: gitlab-runner-admin
     namespace: gitlab-runner
-roleRef:
-  kind: Role
-  name: gitlab-ci
-  apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -113,7 +115,7 @@ spec:
   updateStrategy:
     type: RollingUpdate
   replicas: 1
-  serviceName: gitlab-ci-runner
+  serviceName: gitlab-ci
   selector:
     matchLabels:
       app: gitlab-ci-runner
@@ -126,23 +128,11 @@ spec:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - topologyKey: 'kubernetes.io/hostname'
-      serviceAccountName: gitlab-ci
-      volumes:
-        - name: gitlab-ci-runner-scripts
-          projected:
-            sources:
-              - configMap:
-                  name: gitlab-ci-runner-scripts
-                  items:
-                    - key: run.sh
-                      path: run.sh
-                      mode: 0755
+      serviceAccountName: gitlab-runner-admin
       securityContext:
-        runAsNonRoot: true
-        runAsUser: 999
-        supplementalGroups: [999]
+        runAsNonRoot: false
       containers:
-        - image: gitlab/gitlab-runner:v12.6.0
+        - image: gitlab/gitlab-runner:alpine-v13.7.0
           name: gitlab-ci-runner
           command:
             - /scripts/run.sh
@@ -164,4 +154,18 @@ spec:
             - name: gitlab-ci-runner-scripts
               mountPath: '/scripts'
               readOnly: true
+            - name: conf
+              mountPath: '/etc/gitlab-runner/certs'
+      volumes:
+        - name: conf
+          hostPath:
+            path: /mnt/conf
+            type: Directory
+        - name: gitlab-ci-runner-scripts
+          configMap:
+            name: gitlab-ci-runner-scripts
+            items:
+              - key: run.sh
+                path: run.sh
+                mode: 0755
       restartPolicy: Always
