--- a/manifest/k8s_keycloak.yml
+++ b/manifest/k8s_keycloak.yml
@@ -11,12 +11,27 @@ metadata:
   labels:
     app: keycloak
 data:
-  KEYCLOAK_USER: YWRtaW4K
-  KEYCLOAK_PASSWORD: YWRtaW4K
+  KEYCLOAK_USER: YWRtaW4=
+  KEYCLOAK_PASSWORD: SGVsbG9IYWxvTHVmZnlEaWFibGVKYW1iZSFfODgyNDQ0QXplcnR5
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: keycloak-postgres-token
+  namespace: nearmi
+  labels:
+    app: keycloak
+data:
+  DB_USER: a2V5Y2xvYWs=
+  DB_PASSWORD: VmlvdS0tKHwhUm95YU1halJhaXBvbmNlVHRsYW11cjY3ODc4
 ---
 apiVersion: v1
 data:
   PROXY_ADDRESS_FORWARDING: 'true'
+  DB_VENDOR: postgres
+  DB_ADDR: postgres-svc.nearmi.svc.cluster.local
+  DB_DATABASE: keycloak
+  DB_USER: keycloak
 kind: ConfigMap
 metadata:
   labels:
@@ -84,6 +99,8 @@ spec:
                 name: keycloak-config
             - secretRef:
                 name: keycloak-token
+            - secretRef:
+                name: keycloak-postgres-token
           ports:
             - name: http
               containerPort: 8080
