--- a/manifest/dev-tool/k8s_gitlab-runner.yml
+++ b/manifest/dev-tool/k8s_gitlab-runner.yml
@@ -72,7 +72,7 @@ metadata:
   labels:
     app: gitlab-ci-runner
 data:
-  GITLAB_CI_TOKEN: V1k1bllTVzkxUmh6TnEtS2lMWXgK
+  GITLAB_CI_TOKEN: #MANIFEST_GITLAB_REG_TOKEN#
 ---
 apiVersion: v1
 kind: ServiceAccount
